# cloudcricket

./: README.md  pyproject.toml
.github/: pull_request_template.md
terraform/: .terraform.lock.hcl  README.md  env-dev.tfvars  main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
