[tool.poetry]
name = "cloudcricket"
version = "0.1.0"
description = "Deploying cricket data to GCP"
authors = ["Brandon Hao <brandonhao25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
